apps/production/networking/misc-config/status/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-status
  namespace: networking
  # annotations:
  #   coredns.io/hostname: "status.${SECRET_DOMAIN}"
spec:
  type: ExternalName
  externalName: stats.uptimerobot.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-status-ingress
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/upstream-vhost: "stats.uptimerobot.com"
    nginx.ingress.kubernetes.io/server-snippets: |
        location / {
          resolver 1.1.1.1;
          proxy_pass https://stats.uptimerobot.com;

        }
spec:
  rules:
  - host: "status.${SECRET_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-status
            port:
              number: 443
  tls:
  - hosts:
    - "status.${SECRET_DOMAIN}"
