apps/production/networking/misc-config/status/status.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-status
  namespace: networking
spec:
  type: ExternalName
  externalName: "stats.uptimerobot.com"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-status
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/target: "status.${SECRET_DOMAIN}"
    hajimari.io/icon: simple-icons:list-status
spec:
  rules:
  - host: "status.${SECRET_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-status
            port:
              number: 443
  tls:
  - hosts:
    - "status.${SECRET_DOMAIN}"
